13 Jyly 2011 :
	NWChem is now supported
	Geometry and charges can be read from a aimall sum file

10 June 2011 :
	Bug fixed for animated vibration/threshold
	Bug fixed : orbitals molpro (define NOrb)

1 June 2011 :
	Group of the third atom can be rotated in Draw Geom window.

30 April 2011 :
	pair radial distribution
	RMSD for a trajectory
	Reading dipole from a ADMP output file and computing of auto correlation dipole function (not fully tested)

7 April 2011 :
	Fourier Transformation in GabexitXYPlot window (not fully tested)

5 April 2011 :
	Orthonormalization of Mopac MO (only normalisation on old versions)

10 Mars 2011 :
	Local rotation bug fixed
	Screen capture (using png or tif) under window bug fixed 

22 February 2011 :
	Show cell in Display window
	Bug : Update coordinates after a move fragment

20 Junuary 2011 :
	Read beta orbitals from fchk file : Bug fixed
	Rotation of a fragment by mouse : bug fixed

22 December 2010 :
	new tools for select atoms : multiple selection

20 December 2010 :
	Atoms can be fixed dunring MD
	Screen capture of geometry drawing window in ppm or bmp : A bug were fixed

02 December 2010 :
	Multigrid method : multipolaire developpement at the center of charge. Multipole order 3 is now used.
	Comformational search with semi-emperical : A bug is fixed.

08 November 2010 :
	add Space Fill option to "Draw Geom"" window.

02 November 2010 :
	Migration to OpenGL for "Draw Geom" window.
	Remove DRAWGEOMGL variable from CONFIG file to obtain a "Draw Geom" with old style(Cairo).

25 October 2010 :
	Bug fixed : Gabedit can now read the partial charges from Gamess (FireFly) output file

18 October 2010 :
	Bug fixed : conversion from Hartree/Bohr to kcal/Ang for FireFly gradient

9 October 2010 :
	The center of the molecule is not changed after insertion of atoms.

16 September 2010 :
	Bussi thermostat implemented( velocity scaling)
	G. Bussi and M. Parrinello, 